--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://giiin.convex.site/" />
     <meta property="og:title" content="GIIIN/ギイーン - 市民の声を届ける議会活動" />
-    <meta property="og:description" content="市民の皆様の声を市政に反映させるため、議員の活動を透明化し、より身近で開かれた議会を目指しています。" />
+    <meta property="og:description" content="市民の皆様の声を市政に反映させるため、議員の活動を透明化し、より身近で開かれた議会をめざそう。" />
     <meta property="og:image" content="https://i.gyazo.com/b4bbdbe8695db5c6bfbc110001f0c855.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -32,11 +32,11 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://giiin.convex.site/" />
     <meta property="twitter:title" content="GIIIN/ギイーン - 市民の声を届ける議会活動" />
-    <meta property="twitter:description" content="市民の皆様の声を市政に反映させるため、議員の活動を透明化し、より身近で開かれた議会を目指しています。" />
+    <meta property="twitter:description" content="市民の皆様の声を市政に反映させるため、議員の活動を透明化し、より身近で開かれた議会をめざそう。" />
     <meta property="twitter:image" content="https://i.gyazo.com/b4bbdbe8695db5c6bfbc110001f0c855.png" />
     
     <!-- Additional SEO -->
-    <meta name="description" content="市民の皆様の声を市政に反映させるため、議員の活動を透明化し、より身近で開かれた議会を目指しています。" />
+    <meta name="description" content="市民の皆様の声を市政に反映させるため、議員の活動を透明化し、より身近で開かれた議会をめざそう。" />
     <meta name="keywords" content="議会,議員,市政,透明化,市民参加,政治,地方自治" />
     <meta name="author" content="GIIIN/ギイーン" />
   </head>
